#1.2updating index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
@@ -27,7 +27,7 @@
       <p class="welcome-header__text">카카오톡 계정이 있다면, 로그인 하세요.</p>
     </header>
 
-    <form id="login-form">
+    <form action="friends.html" method="get" id="login-form">
       <input type="text" placeholder="카카오계정 (이메일 또는 전화번호)" />
       <input type="password" placeholder="비밀번호" />
       <input type="submit" placeholder="로그인" />
