--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service</span>
-        <i class="fas fa-wifi"></i>
+        <span>14:52</span>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
-      </div>
-      <div class="status-bar__column">
-        <span>110%</span>
+        <i class="fas fa-signal"></i>
+        <span>5G</span>
         <i class="fas fa-battery-full fa-lg"></i>
-        <i class="fas fa-bolt"></i>
       </div>
     </div>
 
@@ -34,6 +30,6 @@
       <a href="#">카카오 계정 혹은 비밀번호 찾기</a>
     </form>
 
-    <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a1706690cc.js" crossorigin="anonymous"></script>
   </body>
 </html>
