--- a/friends.html
+++ b/friends.html
@@ -9,7 +9,7 @@
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>14:52</span>
+        <span id="clock">00:00</span>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-signal"></i>
@@ -18,26 +18,112 @@
       </div>
     </div>
 
+    <header class="screen-header">
+      <h1 class="screen-header__title">친구</h1>
+      <div class="screen-header__icons">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-cog fa-lg"></i></span>
+      </div>
+    </header>
+
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img src="https://avatars.githubusercontent.com/u/87157589?s=64&v=4" class="user-component__avatar user-component__avatar--xl" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">설소윤</h4>
+            <h6 class="user-component__subtitle">노는 게 제일 좋아</h6>
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>채널</span>
+          <button class="channel-toggle-btn">
+            <i class="fas fa-chevron-up fa-xs"></i>
+          </button>
+        </div>
+        <div class="user-component channel-component">
+          <div class="user-component__column">
+            <img src="screenshots/다운로드.png" class="user-component__avatar user-component__avatar--sm" />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">채널</h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>친구 2</span>
+          <button class="friends-toggle-btn">
+            <i class="fas fa-chevron-up fa-xs"></i>
+          </button>
+        </div>
+        <div class="friends-component">
+          <div class="user-component friends-profile">
+            <div class="user-component__column">
+              <img src="screenshots/khs.png" class="user-component__avatar user-component__avatar--sm" />
+              <div class="user-component__text">
+                <h4 class="user-component__title user-component__title--not-bold">김혜수</h4>
+                <h6 class="user-component__subtitle state-message">가을 타나봐</h6>
+              </div>
+            </div>
+            <div class="user-component__column">
+              <div class="state-music">
+                <p>Beige coat - 그리즐리</p>
+                <i class="fas fa-play"></i>
+              </div>
+            </div>
+          </div>
+          <div class="user-component">
+            <div class="user-component__column friends-profile">
+              <img src="screenshots/hsh.jpg" class="user-component__avatar user-component__avatar--sm" />
+              <div class="user-component__text">
+                <h4 class="user-component__title user-component__title--not-bold">한소희</h4>
+                <h6 class="user-component__subtitle state-message">카톡 답 늦어요</h6>
+              </div>
+            </div>
+            <div class="user-component__column">
+              <div class="state-music">
+                <p>let me let you go - John K</p>
+                <i class="fas fa-play"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#">
-            <span class="nav__notification">1</span>
+          <a class="nav__link" href="chats.html">
+            <span class="nav__notification badge">1</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
+          <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-2x"></i></a>
+          <a class="nav__link" href="more.html"><i class="fas fa-ellipsis-h fa-2x"></i></a>
         </li>
       </ul>
     </nav>
 
+    <script src="js/main.js"></script>
     <script src="https://kit.fontawesome.com/a1706690cc.js" crossorigin="anonymous"></script>
   </body>
 </html>
