--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>14:52</span>
+        <span id="clock">00:00</span>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-signal"></i>
@@ -31,5 +31,6 @@
     </form>
 
     <script src="https://kit.fontawesome.com/a1706690cc.js" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
