--- a/more.html
+++ b/more.html
@@ -28,20 +28,41 @@
         ></span>
       </div>
     </header>
-
-    <main class="main-screen more-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="https://avatars.githubusercontent.com/u/87157589?s=64&v=4" class="user-component__avatar user-component__avatar--xl" />
-          <div class="user-component__text">
-            <h4 class="user-component__title">설소윤</h4>
-            <h6 class="user-component__subtitle">010-5711-1917</h6>
-          </div>
+    <div class="wallet">
+      <div class="wallet-section">
+        <div class="wallet-section__left">
+          <span id="main-title">지갑</span>
+          <i class="fas fa-angle-right"></i>
         </div>
-        <div class="user-component__column">
-          <i class="far fa-comment-alt fa-2x"></i>
+        <div class="wallet-section__right">
+          <i class="fas fa-shield-alt"></i>
+          <span class="line block">인증서</span>
+          <i class="fas fa-qrcode block"></i>
+          <span>QR체크인</span>
         </div>
       </div>
+      <div class="wallet-section">
+        <div class="wallet-section__left">
+          <i class="fas fa-comment"></i>
+          <span>PAY</span>
+        </div>
+        <div class="wallet-section__right">
+          <span>0원</span>
+        </div>
+      </div>
+      <div class="wallet-section">
+        <div class="wallet-section__left">
+          <span class="line">송금</span>
+          <span class="line block">결제</span>
+          <span class="block">자산</span>
+        </div>
+        <div class="wallet-section__right">
+          <i class="fas fa-shopping-cart"></i>
+          <span>구매내역</span>
+        </div>
+      </div>
+    </div>
+    <main class="main-screen more-screen">
       <div class="icon-row">
         <div class="icon-row__icon">
           <i class="far fa-calendar"></i>
@@ -61,7 +82,7 @@
         </div>
       </div>
       <div class="more-suggestions">
-        <h4 class="more-suggestions__title">추천</h4>
+        <h4 class="more-suggestions__title">날씨</h4>
         <div class="more-suggestions__icons">
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
@@ -73,7 +94,7 @@
             <div class="more-suggestions__icon-image">
               <i class="fas fa-quote-right"></i>
             </div>
-            <span class="more-suggestions__icon-text">카카오 스토리</span>
+            <span class="more-suggestions__icon-text">카카오 뱅크</span>
           </div>
         </div>
       </div>
@@ -99,6 +120,6 @@
       </ul>
     </nav>
     <script src="js/main.js"></script>
-    <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a1706690cc.js" crossorigin="anonymous"></script>
   </body>
 </html>
