--- a/more.html
+++ b/more.html
@@ -84,17 +84,21 @@
       <div class="more-suggestions">
         <h4 class="more-suggestions__title">날씨</h4>
         <div class="more-suggestions__icons">
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+          <div class="more-suggestions__icon__left">
+            <div class="weather-city">
+              <span></span>
             </div>
-            <span class="more-suggestions__icon-text">카카오 스토리</span>
+            <div class="weather-temp">
+              <span></span>
+            </div>
           </div>
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+          <div class="more-suggestions__icon__right">
+            <div class="weather-icon">
+              <img alt="" />
             </div>
-            <span class="more-suggestions__icon-text">카카오 뱅크</span>
+            <div class="weather-main">
+              <span></span>
+            </div>
           </div>
         </div>
       </div>
@@ -119,7 +123,8 @@
         </li>
       </ul>
     </nav>
-    <script src="js/main.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/weather.js"></script>
     <script src="https://kit.fontawesome.com/a1706690cc.js" crossorigin="anonymous"></script>
   </body>
 </html>
