--- a/settings.html
+++ b/settings.html
@@ -44,6 +44,10 @@
           <i class="fas fa-info-circle"></i>
           <span>버전 업데이트</span>
         </li>
+        <li class="settings__setting">
+          <i class="fas fa-toggle-on"></i>
+          <span>흑백모드</span>
+        </li>
       </ul>
     </main>
 
