--- a/chats.html
+++ b/chats.html
@@ -67,6 +67,6 @@
     </nav>
 
     <script src="https://kit.fontawesome.com/a1706690cc.js" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
+    <script src="js/clock.js"></script>
   </body>
 </html>
