--- a/find.html
+++ b/find.html
@@ -96,7 +96,7 @@
         </li>
       </ul>
     </nav>
-    <script src="js/main.js"></script>
+    <script src="js/clock.js"></script>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
   </body>
 </html>
