--- a/friends.html
+++ b/friends.html
@@ -125,7 +125,8 @@
       </ul>
     </nav>
 
-    <script src="js/main.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/friends.js"></script>
     <script src="https://kit.fontawesome.com/a1706690cc.js" crossorigin="anonymous"></script>
   </body>
 </html>
