--- a/settings.html
+++ b/settings.html
@@ -20,10 +20,12 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <i class="fas fa-angle-left fa-3x"></i>
+        <a href="more.html">
+          <i class="fas fa-angle-left fa-3x"></i>
+        </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">설정</h1>
+        <h1 class="alt-header__title">Settings</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -33,20 +35,25 @@
     <main class="main-screen">
       <ul class="settings-list">
         <li class="settings__setting">
-          <i class="fas fa-bullhorn"></i>
-          <span>알림</span>
+          <div class="settings__setting-column">
+            <i class="fas fa-bullhorn"></i>
+            <span>알림</span>
+          </div>
+          <div class="settings__setting-column"></div>
         </li>
         <li class="settings__setting">
-          <i class="fas fa-flask"></i>
-          <span>카카오 실험실</span>
+          <div class="settings__setting-column">
+            <i class="fas fa-flask"></i>
+            <span>카카오 실험실</span>
+          </div>
+          <div class="settings__setting-column"></div>
         </li>
         <li class="settings__setting">
-          <i class="fas fa-info-circle"></i>
-          <span>버전 업데이트</span>
-        </li>
-        <li class="settings__setting">
-          <i class="fas fa-toggle-on"></i>
-          <span>흑백모드</span>
+          <div class="settings__setting-column">
+            <i class="fas fa-info-circle"></i>
+            <span>버전 업데이트</span>
+          </div>
+          <div class="settings__setting-column">최신 버전</div>
         </li>
       </ul>
     </main>
