--- a/chats.html
+++ b/chats.html
@@ -31,19 +31,21 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="screenshots/khs.png" class="user-component__avatar user-component__avatar" />
-          <div class="user-component__text">
-            <h4 class="user-component__title">김혜수</h4>
-            <h6 class="user-component__subtitle">오늘 머해~?</h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img src="screenshots/khs.png" class="user-component__avatar user-component__avatar" />
+            <div class="user-component__text">
+              <h4 class="user-component__title">김혜수</h4>
+              <h6 class="user-component__subtitle">오늘 머해~?</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
