--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat w/ 김혜수 - Kokoa Clone</title>
+    <title>Chat w/ Nico - Kokoa Clone</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
@@ -25,7 +25,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">김혜수</h1>
+        <h1 class="alt-header__title">니꼬</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -34,10 +34,21 @@
     </header>
 
     <main class="main-screen main-chat">
-      <div class="chat__timestamp">Tuesday, June 30, 2020</div>
-    </main>
+      <div class="chat__timestamp">금요일, 10월 01일, 2021</div>
 
+      <div class="message-row">
+        <img src="screenshots/khs.png" />
+        <div class="message-row__content">
+          <span class="message__author">김혜수</span>
+          <div class="message__info">
+            <span class="message__bubble">Hi!</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="js/clock.js"></script>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
   </body>
 </html>
+© 2022 GitHub, Inc. Terms Privac
