--- a/chat.html
+++ b/chat.html
@@ -25,7 +25,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">니꼬</h1>
+        <h1 class="alt-header__title">김혜수</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -41,7 +41,15 @@
         <div class="message-row__content">
           <span class="message__author">김혜수</span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
+            <span class="message__bubble">오늘 머해~?</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble">오늘 저녁에 볼까용??</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -51,4 +59,3 @@
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
   </body>
 </html>
-© 2022 GitHub, Inc. Terms Privac
