--- a/friends.html
+++ b/friends.html
@@ -125,6 +125,10 @@
       </ul>
     </nav>
 
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+
     <script src="js/clock.js"></script>
     <script src="js/friends.js"></script>
     <script src="https://kit.fontawesome.com/a1706690cc.js" crossorigin="anonymous"></script>
