--- a/chat.html
+++ b/chat.html
@@ -61,7 +61,7 @@
         <i class="far fa-plus-square fa-lg"></i>
       </div>
       <div class="reply__column">
-        <input type="text" placeholder="Write a message..." />
+        <input type="text" placeholder="메시지를 입력하세요" />
         <i class="far fa-smile-wink fa-lg"></i>
         <button>
           <i class="fas fa-arrow-up"></i>
