--- a/friends.html
+++ b/friends.html
@@ -81,7 +81,7 @@
             </div>
             <div class="user-component__column">
               <div class="state-music">
-                <p>Beige coat - 그리즐리</p>
+                <p>boat-조지</p>
                 <i class="fas fa-play"></i>
               </div>
             </div>
@@ -91,12 +91,12 @@
               <img src="screenshots/hsh.jpg" class="user-component__avatar user-component__avatar--sm" />
               <div class="user-component__text">
                 <h4 class="user-component__title user-component__title--not-bold">한소희</h4>
-                <h6 class="user-component__subtitle state-message">카톡 답 늦어요</h6>
+                <h6 class="user-component__subtitle state-message">work hard</h6>
               </div>
             </div>
             <div class="user-component__column">
               <div class="state-music">
-                <p>let me let you go - John K</p>
+                <p>선물 - 멜로망스</p>
                 <i class="fas fa-play"></i>
               </div>
             </div>
@@ -127,6 +127,21 @@
 
     <div id="splash-screen">
       <i class="fas fa-comment"></i>
+      <span>카카오톡</span>
+    </div>
+
+    <div id="no-mobile">
+      <div class="error-box">
+        <div class="logo-box">
+          <img src="screenshots/kakaotalk-logo.png" alt="" class="logo" />
+        </div>
+        <h2 class="error-number">404 Error</h2>
+        <h3 class="error-message">페이지가 너무 큽니다.</h3>
+        <p class="error-description">
+          카카오톡은 모바일 사이즈만 지원합니다.<br />
+          F12를 눌러서 해결해보세요!
+        </p>
+      </div>
     </div>
 
     <script src="js/clock.js"></script>
