--- a/index.html
+++ b/index.html
@@ -30,7 +30,21 @@
       <a href="#">카카오 계정 혹은 비밀번호 찾기</a>
     </form>
 
+    <div id="no-mobile">
+      <div class="error-box">
+        <div class="logo-box">
+          <img src="screenshots/kakaotalk-logo.png" alt="" class="logo" />
+        </div>
+        <h2 class="error-number">404 Error</h2>
+        <h3 class="error-message">페이지가 너무 큽니다.</h3>
+        <p class="error-description">
+          카카오톡은 모바일 사이즈만 지원합니다.<br />
+          F12를 눌러서 해결해보세요!
+        </p>
+      </div>
+    </div>
+
+    <script src="js/clock.js"></script>
     <script src="https://kit.fontawesome.com/a1706690cc.js" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
   </body>
 </html>
