--- a/settings.html
+++ b/settings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="CSS/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Settings - Kokoa Clone</title>
@@ -55,6 +55,15 @@
           </div>
           <div class="settings__setting-column">최신 버전</div>
         </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-moon"></i>
+            <span>흑백 모드 체험하기</span>
+          </div>
+          <div class="settings__setting-column">
+            <button class="mode"><i class="fas fa-toggle-off"></i></button>
+          </div>
+        </li>
       </ul>
     </main>
 
@@ -92,6 +101,7 @@
       </div>
     </div>
 
+    <script src="js/blackmode.js"></script>
     <script src="js/clock.js"></script>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
   </body>
