--- a/chat.html
+++ b/chat.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="CSS/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat w/ Nico - Kokoa Clone</title>
+    <title>Chat w/ 김혜수 - Kokoa Clone</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
