--- a/find.html
+++ b/find.html
@@ -10,6 +10,7 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <span id="clock">00:00</span>
+        <button class="mode login-mode"><i class="fas fa-toggle-off fa-lg"></i></button>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-signal"></i>
@@ -23,7 +24,7 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span
-          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+          ><i class="fas fa-cog fa-lg"></i></a
         ></span>
       </div>
     </header>
@@ -111,6 +112,7 @@
       </div>
     </div>
 
+    <script src="js/blackmode.js"></script>
     <script src="js/clock.js"></script>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
   </body>
