--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <span id="clock">00:00</span>
+        <button class="mode login-mode"><i class="fas fa-toggle-off fa-lg"></i></button>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-signal"></i>
@@ -44,6 +45,7 @@
       </div>
     </div>
 
+    <script src="js/blackmode.js"></script>
     <script src="js/clock.js"></script>
     <script src="https://kit.fontawesome.com/a1706690cc.js" crossorigin="anonymous"></script>
   </body>
