--- a/settings.html
+++ b/settings.html
@@ -10,6 +10,7 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <span id="clock">00:00</span>
+        <button class="mode login-mode"><i class="fas fa-toggle-off fa-lg"></i></button>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-signal"></i>
